timer panel updates